HotFix in DBOThreadSelect